src/y.output
Grammar

    0 $accept: translation_unit $end

    1 translation_unit: external_statement
    2                 | translation_unit external_statement

    3 external_statement: function_definition
    4                   | statement

    5 statement: expression_statement
    6          | compound_statement
    7          | selection_statement
    8          | iteration_statement
    9          | jump_statement
   10          | declaration_statement

   11 expression_statement: expression ';'
   12                     | ';'

   13 statement_list: statement
   14               | statement_list statement

   15 compound_statement: '{' '}'
   16                   | '{' statement_list '}'

   17 selection_statement: IF '(' expression ')' statement
   18                    | IF '(' expression ')' statement ELSE statement

   19 iteration_statement: WHILE '(' expression ')' statement
   20                    | FOR '(' expression ';' expression ';' expression ')' statement
   21                    | FOR '(' expression ';' expression ';' ')' statement
   22                    | FOR '(' expression ';' ';' expression ')' statement
   23                    | FOR '(' expression ';' ';' ')' statement
   24                    | FOR '(' ';' expression ';' expression ')' statement
   25                    | FOR '(' ';' expression ';' ')' statement
   26                    | FOR '(' ';' ';' expression ')' statement
   27                    | FOR '(' ';' ';' ')' statement
   28                    | FOREACH '(' IDENTIFIER ':' postfix_expression ')' statement

   29 jump_statement: BREAK ';'
   30               | CONTINUE ';'
   31               | RETURN expression ';'
   32               | RETURN ';'

   33 declaration_statement: declaration
   34                      | function_literal_definition

   35 expression: assignment_expression
   36           | expression ',' assignment_expression

   37 assignment_expression: logical_OR_expression
   38                      | unary_expression assignment_operator assignment_expression

   39 assignment_operator: '='
   40                    | ADD_ASSIGN
   41                    | SUB_ASSIGN
   42                    | MUL_ASSIGN
   43                    | DIV_ASSIGN
   44                    | EAT

   45 logical_OR_expression: logical_AND_expression
   46                      | logical_OR_expression OR logical_AND_expression

   47 logical_AND_expression: equality_expression
   48                       | logical_AND_expression AND equality_expression

   49 equality_expression: relational_expression
   50                    | equality_expression EQ relational_expression
   51                    | equality_expression NE relational_expression

   52 relational_expression: additive_expression
   53                      | relational_expression LT additive_expression
   54                      | relational_expression GT additive_expression
   55                      | relational_expression LE additive_expression
   56                      | relational_expression GE additive_expression

   57 additive_expression: multiplicative_expression
   58                    | additive_expression '+' multiplicative_expression
   59                    | additive_expression '-' multiplicative_expression

   60 multiplicative_expression: unary_expression
   61                          | multiplicative_expression '*' unary_expression
   62                          | multiplicative_expression '/' unary_expression

   63 unary_expression: postfix_expression
   64                 | unary_operator unary_expression

   65 unary_operator: '+'
   66               | '-'
   67               | '!'

   68 postfix_expression: primary_expression
   69                   | primary_expression ':' primary_expression ARROW primary_expression
   70                   | primary_expression ':' primary_expression ARROW primary_expression MARK primary_expression
   71                   | postfix_expression '(' argument_expression_list ')'
   72                   | postfix_expression '(' ')'
   73                   | postfix_expression PIPE pipe_property
   74                   | postfix_expression '[' logical_OR_expression ']'
   75                   | postfix_expression '.' IDENTIFIER
   76                   | postfix_expression '.' graph_property

   77 primary_expression: attribute
   78                   | IDENTIFIER
   79                   | constant
   80                   | STRING_LITERAL
   81                   | '(' expression ')'

   82 graph_property: ALL_VERTICES
   83               | ALL_EDGES

   84 pipe_property: OUTCOMING_EDGES
   85              | INCOMING_EDGES
   86              | STARTING_VERTICES
   87              | ENDING_VERTICES

   88 argument_expression_list: assignment_expression
   89                         | argument_expression_list ',' assignment_expression

   90 attribute: AT IDENTIFIER

   91 constant: NUMBER_CONSTANT
   92         | TRUE
   93         | FALSE

   94 function_literal_definition: function_literal_type_sepcifier declarator '=' compound_statement ';'
   95                            | function_literal_type_sepcifier declarator ':' basic_type_specifier '=' compound_statement ';'

   96 function_definition: declaration_specifiers declarator compound_statement

   97 function_literal_type_sepcifier: FUNC_LITERAL

   98 basic_type_specifier: VOID
   99                     | BOOLEAN
  100                     | NUMBER
  101                     | STRING
  102                     | LIST
  103                     | VERTEX
  104                     | EDGE
  105                     | GRAPH

  106 declaration: declaration_specifiers init_declarator_list ';'

  107 declaration_specifiers: basic_type_specifier

  108 init_declarator_list: init_declarator
  109                     | init_declarator_list ',' init_declarator

  110 init_declarator: declarator
  111                | declarator '=' initializer

  112 declarator: direct_declarator

  113 direct_declarator: IDENTIFIER
  114                  | IDENTIFIER '(' parameter_type_list ')'
  115                  | IDENTIFIER '(' ')'

  116 parameter_type_list: parameter_list
  117                    | parameter_list ',' ELLIPSIS

  118 parameter_list: parameter_declaration
  119               | parameter_list ',' parameter_declaration

  120 parameter_declaration: declaration_specifiers IDENTIFIER
  121                      | function_literal_type_sepcifier IDENTIFIER

  122 initializer: assignment_expression
  123            | '{' initializer_list '}'
  124            | '{' initializer_list ',' '}'

  125 initializer_list: initializer
  126                 | initializer_list ',' initializer


Terminals, with rules where they appear

$end (0) 0
'!' (33) 67
'(' (40) 17 18 19 20 21 22 23 24 25 26 27 28 71 72 81 114 115
')' (41) 17 18 19 20 21 22 23 24 25 26 27 28 71 72 81 114 115
'*' (42) 61
'+' (43) 58 65
',' (44) 36 89 109 117 119 124 126
'-' (45) 59 66
'.' (46) 75 76
'/' (47) 62
':' (58) 28 69 70 95
';' (59) 11 12 20 21 22 23 24 25 26 27 29 30 31 32 94 95 106
'=' (61) 39 94 95 111
'[' (91) 74
']' (93) 74
'{' (123) 15 16 123 124
'}' (125) 15 16 123 124
error (256)
VOID (258) 98
BOOLEAN (259) 99
NUMBER (260) 100
STRING (261) 101
LIST (262) 102
VERTEX (263) 103
EDGE (264) 104
GRAPH (265) 105
IDENTIFIER (266) 28 75 78 90 113 114 115 120 121
NUMBER_CONSTANT (267) 91
STRING_LITERAL (268) 80
TRUE (269) 92
FALSE (270) 93
FUNC_LITERAL (271) 97
OUTCOMING_EDGES (272) 84
INCOMING_EDGES (273) 85
STARTING_VERTICES (274) 86
ENDING_VERTICES (275) 87
ALL_VERTICES (276) 82
ALL_EDGES (277) 83
OR (278) 46
AND (279) 48
EQ (280) 50
NE (281) 51
GT (282) 54
LT (283) 53
GE (284) 56
LE (285) 55
ELLIPSIS (286) 117
ADD_ASSIGN (287) 40
SUB_ASSIGN (288) 41
MUL_ASSIGN (289) 42
DIV_ASSIGN (290) 43
EAT (291) 44
ARROW (292) 69 70
PIPE (293) 73
AT (294) 90
MARK (295) 70
IF (296) 17 18
ELSE (297) 18
FOR (298) 20 21 22 23 24 25 26 27
FOREACH (299) 28
WHILE (300) 19
BREAK (301) 29
CONTINUE (302) 30
RETURN (303) 31 32
LOWER_THAN_ELSE (304)


Nonterminals, with rules where they appear

$accept (66)
    on left: 0
translation_unit (67)
    on left: 1 2, on right: 0 2
external_statement (68)
    on left: 3 4, on right: 1 2
statement (69)
    on left: 5 6 7 8 9 10, on right: 4 13 14 17 18 19 20 21 22 23 24
    25 26 27 28
expression_statement (70)
    on left: 11 12, on right: 5
statement_list (71)
    on left: 13 14, on right: 14 16
compound_statement (72)
    on left: 15 16, on right: 6 94 95 96
selection_statement (73)
    on left: 17 18, on right: 7
iteration_statement (74)
    on left: 19 20 21 22 23 24 25 26 27 28, on right: 8
jump_statement (75)
    on left: 29 30 31 32, on right: 9
declaration_statement (76)
    on left: 33 34, on right: 10
expression (77)
    on left: 35 36, on right: 11 17 18 19 20 21 22 23 24 25 26 31 36
    81
assignment_expression (78)
    on left: 37 38, on right: 35 36 38 88 89 122
assignment_operator (79)
    on left: 39 40 41 42 43 44, on right: 38
logical_OR_expression (80)
    on left: 45 46, on right: 37 46 74
logical_AND_expression (81)
    on left: 47 48, on right: 45 46 48
equality_expression (82)
    on left: 49 50 51, on right: 47 48 50 51
relational_expression (83)
    on left: 52 53 54 55 56, on right: 49 50 51 53 54 55 56
additive_expression (84)
    on left: 57 58 59, on right: 52 53 54 55 56 58 59
multiplicative_expression (85)
    on left: 60 61 62, on right: 57 58 59 61 62
unary_expression (86)
    on left: 63 64, on right: 38 60 61 62 64
unary_operator (87)
    on left: 65 66 67, on right: 64
postfix_expression (88)
    on left: 68 69 70 71 72 73 74 75 76, on right: 28 63 71 72 73 74
    75 76
primary_expression (89)
    on left: 77 78 79 80 81, on right: 68 69 70
graph_property (90)
    on left: 82 83, on right: 76
pipe_property (91)
    on left: 84 85 86 87, on right: 73
argument_expression_list (92)
    on left: 88 89, on right: 71 89
attribute (93)
    on left: 90, on right: 77
constant (94)
    on left: 91 92 93, on right: 79
function_literal_definition (95)
    on left: 94 95, on right: 34
function_definition (96)
    on left: 96, on right: 3
function_literal_type_sepcifier (97)
    on left: 97, on right: 94 95 121
basic_type_specifier (98)
    on left: 98 99 100 101 102 103 104 105, on right: 95 107
declaration (99)
    on left: 106, on right: 33
declaration_specifiers (100)
    on left: 107, on right: 96 106 120
init_declarator_list (101)
    on left: 108 109, on right: 106 109
init_declarator (102)
    on left: 110 111, on right: 108 109
declarator (103)
    on left: 112, on right: 94 95 96 110 111
direct_declarator (104)
    on left: 113 114 115, on right: 112
parameter_type_list (105)
    on left: 116 117, on right: 114
parameter_list (106)
    on left: 118 119, on right: 116 117 119
parameter_declaration (107)
    on left: 120 121, on right: 118 119
initializer (108)
    on left: 122 123 124, on right: 111 125 126
initializer_list (109)
    on left: 125 126, on right: 123 124 126


state 0

    0 $accept: . translation_unit $end

    VOID             shift, and go to state 1
    BOOLEAN          shift, and go to state 2
    NUMBER           shift, and go to state 3
    STRING           shift, and go to state 4
    LIST             shift, and go to state 5
    VERTEX           shift, and go to state 6
    EDGE             shift, and go to state 7
    GRAPH            shift, and go to state 8
    IDENTIFIER       shift, and go to state 9
    NUMBER_CONSTANT  shift, and go to state 10
    STRING_LITERAL   shift, and go to state 11
    TRUE             shift, and go to state 12
    FALSE            shift, and go to state 13
    FUNC_LITERAL     shift, and go to state 14
    AT               shift, and go to state 15
    IF               shift, and go to state 16
    FOR              shift, and go to state 17
    FOREACH          shift, and go to state 18
    WHILE            shift, and go to state 19
    BREAK            shift, and go to state 20
    CONTINUE         shift, and go to state 21
    RETURN           shift, and go to state 22
    ';'              shift, and go to state 23
    '{'              shift, and go to state 24
    '('              shift, and go to state 25
    '+'              shift, and go to state 26
    '-'              shift, and go to state 27
    '!'              shift, and go to state 28

    translation_unit                 go to state 29
    external_statement               go to state 30
    statement                        go to state 31
    expression_statement             go to state 32
    compound_statement               go to state 33
    selection_statement              go to state 34
    iteration_statement              go to state 35
    jump_statement                   go to state 36
    declaration_statement            go to state 37
    expression                       go to state 38
    assignment_expression            go to state 39
    logical_OR_expression            go to state 40
    logical_AND_expression           go to state 41
    equality_expression              go to state 42
    relational_expression            go to state 43
    additive_expression              go to state 44
    multiplicative_expression        go to state 45
    unary_expression                 go to state 46
    unary_operator                   go to state 47
    postfix_expression               go to state 48
    primary_expression               go to state 49
    attribute                        go to state 50
    constant                         go to state 51
    function_literal_definition      go to state 52
    function_definition              go to state 53
    function_literal_type_sepcifier  go to state 54
    basic_type_specifier             go to state 55
    declaration                      go to state 56
    declaration_specifiers           go to state 57


state 1

   98 basic_type_specifier: VOID .

    $default  reduce using rule 98 (basic_type_specifier)


state 2

   99 basic_type_specifier: BOOLEAN .

    $default  reduce using rule 99 (basic_type_specifier)


state 3

  100 basic_type_specifier: NUMBER .

    $default  reduce using rule 100 (basic_type_specifier)


state 4

  101 basic_type_specifier: STRING .

    $default  reduce using rule 101 (basic_type_specifier)


state 5

  102 basic_type_specifier: LIST .

    $default  reduce using rule 102 (basic_type_specifier)


state 6

  103 basic_type_specifier: VERTEX .

    $default  reduce using rule 103 (basic_type_specifier)


state 7

  104 basic_type_specifier: EDGE .

    $default  reduce using rule 104 (basic_type_specifier)


state 8

  105 basic_type_specifier: GRAPH .

    $default  reduce using rule 105 (basic_type_specifier)


state 9

   78 primary_expression: IDENTIFIER .

    $default  reduce using rule 78 (primary_expression)


state 10

   91 constant: NUMBER_CONSTANT .

    $default  reduce using rule 91 (constant)


state 11

   80 primary_expression: STRING_LITERAL .

    $default  reduce using rule 80 (primary_expression)


state 12

   92 constant: TRUE .

    $default  reduce using rule 92 (constant)


state 13

   93 constant: FALSE .

    $default  reduce using rule 93 (constant)


state 14

   97 function_literal_type_sepcifier: FUNC_LITERAL .

    $default  reduce using rule 97 (function_literal_type_sepcifier)


state 15

   90 attribute: AT . IDENTIFIER

    IDENTIFIER  shift, and go to state 58


state 16

   17 selection_statement: IF . '(' expression ')' statement
   18                    | IF . '(' expression ')' statement ELSE statement

    '('  shift, and go to state 59


state 17

   20 iteration_statement: FOR . '(' expression ';' expression ';' expression ')' statement
   21                    | FOR . '(' expression ';' expression ';' ')' statement
   22                    | FOR . '(' expression ';' ';' expression ')' statement
   23                    | FOR . '(' expression ';' ';' ')' statement
   24                    | FOR . '(' ';' expression ';' expression ')' statement
   25                    | FOR . '(' ';' expression ';' ')' statement
   26                    | FOR . '(' ';' ';' expression ')' statement
   27                    | FOR . '(' ';' ';' ')' statement

    '('  shift, and go to state 60


state 18

   28 iteration_statement: FOREACH . '(' IDENTIFIER ':' postfix_expression ')' statement

    '('  shift, and go to state 61


state 19

   19 iteration_statement: WHILE . '(' expression ')' statement

    '('  shift, and go to state 62


state 20

   29 jump_statement: BREAK . ';'

    ';'  shift, and go to state 63


state 21

   30 jump_statement: CONTINUE . ';'

    ';'  shift, and go to state 64


state 22

   31 jump_statement: RETURN . expression ';'
   32               | RETURN . ';'

    IDENTIFIER       shift, and go to state 9
    NUMBER_CONSTANT  shift, and go to state 10
    STRING_LITERAL   shift, and go to state 11
    TRUE             shift, and go to state 12
    FALSE            shift, and go to state 13
    AT               shift, and go to state 15
    ';'              shift, and go to state 65
    '('              shift, and go to state 25
    '+'              shift, and go to state 26
    '-'              shift, and go to state 27
    '!'              shift, and go to state 28

    expression                 go to state 66
    assignment_expression      go to state 39
    logical_OR_expression      go to state 40
    logical_AND_expression     go to state 41
    equality_expression        go to state 42
    relational_expression      go to state 43
    additive_expression        go to state 44
    multiplicative_expression  go to state 45
    unary_expression           go to state 46
    unary_operator             go to state 47
    postfix_expression         go to state 48
    primary_expression         go to state 49
    attribute                  go to state 50
    constant                   go to state 51


state 23

   12 expression_statement: ';' .

    $default  reduce using rule 12 (expression_statement)


state 24

   15 compound_statement: '{' . '}'
   16                   | '{' . statement_list '}'

    VOID             shift, and go to state 1
    BOOLEAN          shift, and go to state 2
    NUMBER           shift, and go to state 3
    STRING           shift, and go to state 4
    LIST             shift, and go to state 5
    VERTEX           shift, and go to state 6
    EDGE             shift, and go to state 7
    GRAPH            shift, and go to state 8
    IDENTIFIER       shift, and go to state 9
    NUMBER_CONSTANT  shift, and go to state 10
    STRING_LITERAL   shift, and go to state 11
    TRUE             shift, and go to state 12
    FALSE            shift, and go to state 13
    FUNC_LITERAL     shift, and go to state 14
    AT               shift, and go to state 15
    IF               shift, and go to state 16
    FOR              shift, and go to state 17
    FOREACH          shift, and go to state 18
    WHILE            shift, and go to state 19
    BREAK            shift, and go to state 20
    CONTINUE         shift, and go to state 21
    RETURN           shift, and go to state 22
    ';'              shift, and go to state 23
    '{'              shift, and go to state 24
    '}'              shift, and go to state 67
    '('              shift, and go to state 25
    '+'              shift, and go to state 26
    '-'              shift, and go to state 27
    '!'              shift, and go to state 28

    statement                        go to state 68
    expression_statement             go to state 32
    statement_list                   go to state 69
    compound_statement               go to state 33
    selection_statement              go to state 34
    iteration_statement              go to state 35
    jump_statement                   go to state 36
    declaration_statement            go to state 37
    expression                       go to state 38
    assignment_expression            go to state 39
    logical_OR_expression            go to state 40
    logical_AND_expression           go to state 41
    equality_expression              go to state 42
    relational_expression            go to state 43
    additive_expression              go to state 44
    multiplicative_expression        go to state 45
    unary_expression                 go to state 46
    unary_operator                   go to state 47
    postfix_expression               go to state 48
    primary_expression               go to state 49
    attribute                        go to state 50
    constant                         go to state 51
    function_literal_definition      go to state 52
    function_literal_type_sepcifier  go to state 54
    basic_type_specifier             go to state 55
    declaration                      go to state 56
    declaration_specifiers           go to state 70


state 25

   81 primary_expression: '(' . expression ')'

    IDENTIFIER       shift, and go to state 9
    NUMBER_CONSTANT  shift, and go to state 10
    STRING_LITERAL   shift, and go to state 11
    TRUE             shift, and go to state 12
    FALSE            shift, and go to state 13
    AT               shift, and go to state 15
    '('              shift, and go to state 25
    '+'              shift, and go to state 26
    '-'              shift, and go to state 27
    '!'              shift, and go to state 28

    expression                 go to state 71
    assignment_expression      go to state 39
    logical_OR_expression      go to state 40
    logical_AND_expression     go to state 41
    equality_expression        go to state 42
    relational_expression      go to state 43
    additive_expression        go to state 44
    multiplicative_expression  go to state 45
    unary_expression           go to state 46
    unary_operator             go to state 47
    postfix_expression         go to state 48
    primary_expression         go to state 49
    attribute                  go to state 50
    constant                   go to state 51


state 26

   65 unary_operator: '+' .

    $default  reduce using rule 65 (unary_operator)


state 27

   66 unary_operator: '-' .

    $default  reduce using rule 66 (unary_operator)


state 28

   67 unary_operator: '!' .

    $default  reduce using rule 67 (unary_operator)


state 29

    0 $accept: translation_unit . $end
    2 translation_unit: translation_unit . external_statement

    $end             shift, and go to state 72
    VOID             shift, and go to state 1
    BOOLEAN          shift, and go to state 2
    NUMBER           shift, and go to state 3
    STRING           shift, and go to state 4
    LIST             shift, and go to state 5
    VERTEX           shift, and go to state 6
    EDGE             shift, and go to state 7
    GRAPH            shift, and go to state 8
    IDENTIFIER       shift, and go to state 9
    NUMBER_CONSTANT  shift, and go to state 10
    STRING_LITERAL   shift, and go to state 11
    TRUE             shift, and go to state 12
    FALSE            shift, and go to state 13
    FUNC_LITERAL     shift, and go to state 14
    AT               shift, and go to state 15
    IF               shift, and go to state 16
    FOR              shift, and go to state 17
    FOREACH          shift, and go to state 18
    WHILE            shift, and go to state 19
    BREAK            shift, and go to state 20
    CONTINUE         shift, and go to state 21
    RETURN           shift, and go to state 22
    ';'              shift, and go to state 23
    '{'              shift, and go to state 24
    '('              shift, and go to state 25
    '+'              shift, and go to state 26
    '-'              shift, and go to state 27
    '!'              shift, and go to state 28

    external_statement               go to state 73
    statement                        go to state 31
    expression_statement             go to state 32
    compound_statement               go to state 33
    selection_statement              go to state 34
    iteration_statement              go to state 35
    jump_statement                   go to state 36
    declaration_statement            go to state 37
    expression                       go to state 38
    assignment_expression            go to state 39
    logical_OR_expression            go to state 40
    logical_AND_expression           go to state 41
    equality_expression              go to state 42
    relational_expression            go to state 43
    additive_expression              go to state 44
    multiplicative_expression        go to state 45
    unary_expression                 go to state 46
    unary_operator                   go to state 47
    postfix_expression               go to state 48
    primary_expression               go to state 49
    attribute                        go to state 50
    constant                         go to state 51
    function_literal_definition      go to state 52
    function_definition              go to state 53
    function_literal_type_sepcifier  go to state 54
    basic_type_specifier             go to state 55
    declaration                      go to state 56
    declaration_specifiers           go to state 57


state 30

    1 translation_unit: external_statement .

    $default  reduce using rule 1 (translation_unit)


state 31

    4 external_statement: statement .

    $default  reduce using rule 4 (external_statement)


state 32

    5 statement: expression_statement .

    $default  reduce using rule 5 (statement)


state 33

    6 statement: compound_statement .

    $default  reduce using rule 6 (statement)


state 34

    7 statement: selection_statement .

    $default  reduce using rule 7 (statement)


state 35

    8 statement: iteration_statement .

    $default  reduce using rule 8 (statement)


state 36

    9 statement: jump_statement .

    $default  reduce using rule 9 (statement)


state 37

   10 statement: declaration_statement .

    $default  reduce using rule 10 (statement)


state 38

   11 expression_statement: expression . ';'
   36 expression: expression . ',' assignment_expression

    ';'  shift, and go to state 74
    ','  shift, and go to state 75


state 39

   35 expression: assignment_expression .

    $default  reduce using rule 35 (expression)


state 40

   37 assignment_expression: logical_OR_expression .
   46 logical_OR_expression: logical_OR_expression . OR logical_AND_expression

    OR  shift, and go to state 76

    $default  reduce using rule 37 (assignment_expression)


state 41

   45 logical_OR_expression: logical_AND_expression .
   48 logical_AND_expression: logical_AND_expression . AND equality_expression

    AND  shift, and go to state 77

    $default  reduce using rule 45 (logical_OR_expression)


state 42

   47 logical_AND_expression: equality_expression .
   50 equality_expression: equality_expression . EQ relational_expression
   51                    | equality_expression . NE relational_expression

    EQ  shift, and go to state 78
    NE  shift, and go to state 79

    $default  reduce using rule 47 (logical_AND_expression)


state 43

   49 equality_expression: relational_expression .
   53 relational_expression: relational_expression . LT additive_expression
   54                      | relational_expression . GT additive_expression
   55                      | relational_expression . LE additive_expression
   56                      | relational_expression . GE additive_expression

    GT  shift, and go to state 80
    LT  shift, and go to state 81
    GE  shift, and go to state 82
    LE  shift, and go to state 83

    $default  reduce using rule 49 (equality_expression)


state 44

   52 relational_expression: additive_expression .
   58 additive_expression: additive_expression . '+' multiplicative_expression
   59                    | additive_expression . '-' multiplicative_expression

    '+'  shift, and go to state 84
    '-'  shift, and go to state 85

    $default  reduce using rule 52 (relational_expression)


state 45

   57 additive_expression: multiplicative_expression .
   61 multiplicative_expression: multiplicative_expression . '*' unary_expression
   62                          | multiplicative_expression . '/' unary_expression

    '*'  shift, and go to state 86
    '/'  shift, and go to state 87

    $default  reduce using rule 57 (additive_expression)


state 46

   38 assignment_expression: unary_expression . assignment_operator assignment_expression
   60 multiplicative_expression: unary_expression .

    ADD_ASSIGN  shift, and go to state 88
    SUB_ASSIGN  shift, and go to state 89
    MUL_ASSIGN  shift, and go to state 90
    DIV_ASSIGN  shift, and go to state 91
    EAT         shift, and go to state 92
    '='         shift, and go to state 93

    $default  reduce using rule 60 (multiplicative_expression)

    assignment_operator  go to state 94


state 47

   64 unary_expression: unary_operator . unary_expression

    IDENTIFIER       shift, and go to state 9
    NUMBER_CONSTANT  shift, and go to state 10
    STRING_LITERAL   shift, and go to state 11
    TRUE             shift, and go to state 12
    FALSE            shift, and go to state 13
    AT               shift, and go to state 15
    '('              shift, and go to state 25
    '+'              shift, and go to state 26
    '-'              shift, and go to state 27
    '!'              shift, and go to state 28

    unary_expression    go to state 95
    unary_operator      go to state 47
    postfix_expression  go to state 48
    primary_expression  go to state 49
    attribute           go to state 50
    constant            go to state 51


state 48

   63 unary_expression: postfix_expression .
   71 postfix_expression: postfix_expression . '(' argument_expression_list ')'
   72                   | postfix_expression . '(' ')'
   73                   | postfix_expression . PIPE pipe_property
   74                   | postfix_expression . '[' logical_OR_expression ']'
   75                   | postfix_expression . '.' IDENTIFIER
   76                   | postfix_expression . '.' graph_property

    PIPE  shift, and go to state 96
    '('   shift, and go to state 97
    '['   shift, and go to state 98
    '.'   shift, and go to state 99

    $default  reduce using rule 63 (unary_expression)


state 49

   68 postfix_expression: primary_expression .
   69                   | primary_expression . ':' primary_expression ARROW primary_expression
   70                   | primary_expression . ':' primary_expression ARROW primary_expression MARK primary_expression

    ':'  shift, and go to state 100

    $default  reduce using rule 68 (postfix_expression)


state 50

   77 primary_expression: attribute .

    $default  reduce using rule 77 (primary_expression)


state 51

   79 primary_expression: constant .

    $default  reduce using rule 79 (primary_expression)


state 52

   34 declaration_statement: function_literal_definition .

    $default  reduce using rule 34 (declaration_statement)


state 53

    3 external_statement: function_definition .

    $default  reduce using rule 3 (external_statement)


state 54

   94 function_literal_definition: function_literal_type_sepcifier . declarator '=' compound_statement ';'
   95                            | function_literal_type_sepcifier . declarator ':' basic_type_specifier '=' compound_statement ';'

    IDENTIFIER  shift, and go to state 101

    declarator         go to state 102
    direct_declarator  go to state 103


state 55

  107 declaration_specifiers: basic_type_specifier .

    $default  reduce using rule 107 (declaration_specifiers)


state 56

   33 declaration_statement: declaration .

    $default  reduce using rule 33 (declaration_statement)


state 57

   96 function_definition: declaration_specifiers . declarator compound_statement
  106 declaration: declaration_specifiers . init_declarator_list ';'

    IDENTIFIER  shift, and go to state 101

    init_declarator_list  go to state 104
    init_declarator       go to state 105
    declarator            go to state 106
    direct_declarator     go to state 103


state 58

   90 attribute: AT IDENTIFIER .

    $default  reduce using rule 90 (attribute)


state 59

   17 selection_statement: IF '(' . expression ')' statement
   18                    | IF '(' . expression ')' statement ELSE statement
